home alignment issue

--- a/src/components/home/home.scss
+++ b/src/components/home/home.scss
@@ -149,7 +149,7 @@ a {
       #container__about {
           text-align: center;
           .intro {
-              width: 82%;
+              width: 80%;
               padding: 0 10%;
               li {
                   display: block;
